# instagram-carousel-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  CHANGELOG.md  DOCKER-IMPLEMENTATION-CHECKLIST.md  Dockerfile  MANIFEST.in  README.md  app_minimal.py  bandit-config.yaml  docker-compose.advanced.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  server.py  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: code-quality.yml  deploy.yml  docker.yml  lint.yml  release.yml  safety-check.yml  test-secrets.yml  test.yml
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py  endpoints.py  middleware.py  monitoring.py  router.py  security.py  versioning.md
app/api/v1/: __init__.py  endpoints.py  models.py  monitoring_endpoints.py
app/api/v2/: __init__.py
app/core/: __init__.py  config.py  logging.py  models.py  monitoring.py  service_provider.py  services_setup.py
app/models/: carousel.py
app/services/: __init__.py  image_service.py  improved_image_service.py  storage_service.py
app/services/image_service/: README.md  __init__.py  base_image_service.py  enhanced_image_service.py  factory.py  standard_image_service.py
app/static/monitoring/: dashboard.html
app/utils/: carousel_preview.html  html_preview_generator.py  image_utils.py  response.json
docker/: healthcheck.sh
docker/nginx/: default.conf
docs/: folder-structure.txt  instagram-carousel-test-plan-updated.md  instagram-carousel-workflow.md
docs/api/: endpoints.md
docs/dev-tutorial-docs/: api-reference-documentation.md  core-concepts-guide.md  creating-a-custom-image-service.md  customizing-carousel-styling.md  getting-started-with-instagram-carousel-generator.md  integrating-with-automation-workflows.md
docs/examples/: Instagram_Carousel___1_0.json  instagram_carousel_workflow.xlsx
docs/guides/: ci-cd-pipeline.md  cloudflare-integration.md  configuration.md  contributing.md  dependency-injection.md  deployment.md  docker-production-deployment.md  monitoring.md  n8n-workflow-implementation.md  production-deployment.md  security.md  systemd-service.md  testing-guide.md
docs/images/: architecture-diagram.mermaid  class-diagram.mermaid  workflow-diagram.mermaid
docs/old-docs/: api-flow-diagram.mermaid  file-structure-diagram.mermaid  instagram-carousel-user-guide-updated.md  n8n-workflow-implementation.md  project-structure.md
scripts/: cleanup_temp_files.py  create-directory-structure.sh  create_folder_structure.sh  docker.sh  make-executable.sh  setup-docker-env.sh
static/monitoring/: dashboard.html
tests/: __init__.py  conftest.py  test_api.py  test_dependencies.py  test_dependencies_unit.py  test_image_service.py  test_image_service_parametrized.py  test_service_provider.py  test_storage_integration.py
