[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-project-name"
version = "0.1.0"
dependencies = [
    "fastapi==0.109.1",
    "uvicorn==0.23.2",
    "python-multipart==0.0.19",
    "Pillow==10.0.0",
    "python-dotenv==1.0.0",
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",
    "psutil==5.9.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov",
    "flake8",
    "black",
    "mypy",
    "isort"
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
# Remove the extend-ignore line from here

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "api: marks tests as API tests",
    "slow: marks tests as slow running tests",
    "dependency: marks tests related to dependency injection",
    "asyncio: mark tests as asyncio tests",
]
addopts = [
    "--strict-markers",
    "--cov=app",
    "--cov-report=term",
    "--cov-report=html:coverage_html",
    "--no-cov-on-fail",
]
asyncio_mode = "auto"

# If you want to use pyproject.toml for flake8 config (requires flake8-pyproject package)
[tool.flake8]
extend-ignore = "E501"
