[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instagram-carousel-api"
version = "0.1.0"
description = "API for generating Instagram carousel images with consistent styling"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Kitwana Akil"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "fastapi==0.109.1",
    "uvicorn==0.23.2",
    "python-multipart==0.0.19",
    "Pillow==10.0.0",
    "python-dotenv==1.0.0",
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",
    "psutil==5.9.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov",
    "flake8",
    "black",
    "mypy",
    "isort",
    "httpx"
]

[project.scripts]
carousel-api = "app.main:run_app"

# Rest of your existing configuration follows...
[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# ... (rest of your existing configuration)
